@@ -206,7 +206,8 @@ test_find_and_modify_write_concern (int wire_version)
          "{ 'findAndModify' : 'test_find_and_modify', "
          "'query' : { 'superduper' : 77889 },"
          "'update' : { '$set' : { 'superduper' : 1234 } },"
-         "'new' : true }");
+         "'new' : true,"
+         "'writeConcern' : { '$exists': false } }");
    }
 
    mock_server_replies_simple (request, "{ 'value' : null, 'ok' : 1 }");
@@ -417,6 +418,71 @@ test_find_and_modify_opts (void)
 
 
 static void
+test_find_and_modify_opts_write_concern (void)
+{
+   mongoc_write_concern_t *w2;
+   mongoc_write_concern_t *w3;
+   mock_server_t *server;
+   mongoc_client_t *client;
+   mongoc_collection_t *collection;
+   bson_error_t error;
+   mongoc_find_and_modify_opts_t *opts;
+   bson_t extra = BSON_INITIALIZER;
+   future_t *future;
+   request_t *request;
+
+   w2 = mongoc_write_concern_new ();
+   mongoc_write_concern_set_w (w2, 2);
+   w3 = mongoc_write_concern_new ();
+   mongoc_write_concern_set_w (w3, 3);
+
+   server = mock_server_with_autoismaster (WIRE_VERSION_FAM_WRITE_CONCERN);
+   mock_server_run (server);
+
+   client = mongoc_client_new_from_uri (mock_server_get_uri (server));
+   collection = mongoc_client_get_collection (client, "db", "collection");
+
+   opts = mongoc_find_and_modify_opts_new ();
+   mongoc_write_concern_append (w2, &extra);
+   BSON_ASSERT (mongoc_find_and_modify_opts_append (opts, &extra));
+   bson_destroy (&extra);
+
+   future = future_collection_find_and_modify_with_opts (
+      collection, tmp_bson ("{}"), opts, NULL, &error);
+   request = mock_server_receives_command (
+      server,
+      "db",
+      MONGOC_QUERY_NONE,
+      "{'findAndModify': 'collection', 'writeConcern': {'w': 2}}");
+   mock_server_replies_ok_and_destroys (request);
+   ASSERT_OR_PRINT (future_get_bool (future), error);
+   future_destroy (future);
+
+   /* opts overrides collection */
+   mongoc_collection_set_write_concern (collection, w3);
+   future = future_collection_find_and_modify_with_opts (
+      collection, tmp_bson ("{}"), opts, NULL, &error);
+
+   /* still w: 2 */
+   request = mock_server_receives_command (
+      server,
+      "db",
+      MONGOC_QUERY_NONE,
+      "{'findAndModify': 'collection', 'writeConcern': {'w': 2}}");
+   mock_server_replies_ok_and_destroys (request);
+   ASSERT_OR_PRINT (future_get_bool (future), error);
+   future_destroy (future);
+
+   mongoc_find_and_modify_opts_destroy (opts);
+   mongoc_collection_destroy (collection);
+   mongoc_client_destroy (client);
+   mock_server_destroy (server);
+   mongoc_write_concern_destroy (w2);
+   mongoc_write_concern_destroy (w3);
+}
+
+
+static void
 test_find_and_modify_collation (int wire)
 {
    mock_server_t *server;
@@ -518,6 +584,9 @@ test_find_and_modify_install (TestSuite *suite)
                       should_run_fam_wc);
    TestSuite_AddMockServerTest (
       suite, "/find_and_modify/opts", test_find_and_modify_opts);
+   TestSuite_AddMockServerTest (suite,
+                                "/find_and_modify/opts/write_concern",
+                                test_find_and_modify_opts_write_concern);
    TestSuite_AddMockServerTest (suite,
                                 "/find_and_modify/collation/ok",
                                 test_find_and_modify_collation_ok);
